@@ -1,8 +1,8 @@
 Pending reconciliations:
-∙	Normalizing the format of dtext.dat and rewriting the messaging routine: dsub.c, dtext.dat.
-∙	The version numbering & game messages: rtim.c, Test.ex, Test.ex0, dtext.dat.
+∙	Normalizing the format of dtext.dat and rewriting the messaging routine: dsub.c, dgame.c, dtext.dat.
+∙	The version numbering: Test.ex, Test.ex0, dtext.dat.
 ∙	Command-line arguments & settable random number seeds: Test.in, Test.ex, Test.ex0, Makefile, dinit.c (call to inirnd()).
-∙	Enabling flags: demons.c, dgame.c, dinit.c, dsub.c, Makefile, rtim.c, sverbs.c.
+∙	Enabling flags: dsub.c, Makefile.
 ∙	The documentation: README
 ∙	Inclusion of a more comprehensive test suite: Test.*, Makefile.
 Pending recoding ― for both the C and Fortran versions:
