@@ -280,14 +280,15 @@ C
 C THE INTERNAL DATA BASE IS NOW ESTABLISHED.
 C SET UP TO PLAY THE GAME.
 C
-1025	CALL INTIME(SHOUR,SMIN,SSEC)
-C						!GET TIME AND DATE.
 C	Day: DATARRY(1), Month: DATARRY(2), Year: DATARRY(3).
-C	CALL IDATE(DATARRY)
+C1025	CALL IDATE(DATARRY)
 C	CALL INIRND(or(DATARRY(1),or(DATARRY(2),DATARRY(3))),
 C     &	or(SHOUR,or(SMIN,SSEC)))
+1025	CALL INTIME(SHOUR,SMIN,SSEC)
+C						!GET TIME AND DATE.
 C	NEW WAY TO INITIALIZE /*TAA*/
-	CALL INIRND(SHOUR*3600+SMIN*60+SSEC)
+C	CALL INIRND(SHOUR*3600+SMIN*60+SSEC)
+	CALL INIRND(XOR(XOR(SHOUR,SMIN),SSEC))
 C
 	WINNER=PLAYER
 	LASTIT=AOBJ(PLAYER)
